[package]
name = "my_swagger_hub"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static_files",
] }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-http-server-controllers = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }

flurl = { tag = "0.2.2", git = "https://github.com/MyJetTools/fl-url.git" }

my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }

serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_yaml = "*"
