[package]
name = "my-swagger-hub"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "controllers",
] }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }


flurl = { tag = "0.5.3", git = "https://github.com/MyJetTools/fl-url.git" }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-settings-reader = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

tokio = { version = "*", features = ["full"] }
async-trait = "*"


serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_yaml = "*"
